fix: 테스트 코드 불일치 문제 해결 (#6)
- BusinessExceptionTest의 assertInstanceOf 메소드 호환성 문제 수정
- ErrorResponseTest와 통합 테스트에서 timestamp 필드 참조 오류 해결
- GlobalExceptionHandlerIntegrationTest의 메시지 및 errors 필드 검증 수정
- 모든 테스트가 성공적으로 실행되도록 수정

Issue: https://github.com/samsungnomads/Backend/issues/6